change LinkedList usages to ArrayList or ArrayDeque